Added replica config

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,14 @@ default: &default
   host: localhost
 
 development:
-  <<: *default
-  database: test_app_development
+  primary:
+    <<: *default
+    database: test_app_development
+
+  primary_replica:
+    <<: *default
+    database: test_app_development_replica
+    replica: true
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
