disable gssencmode that breaks rails c and configured active record

--- a/config/database.yml
+++ b/config/database.yml
@@ -28,10 +28,12 @@ development:
   primary:
     <<: *default
     database: test_app_development
+    gssencmode: disable
 
   primary_replica:
     <<: *default
     database: test_app_development_replica
+    gssencmode: disable
     replica: true
 
   # The specified database role being used to connect to postgres.
